--- a/src/app/board/forms/detail-form/detail-form.component.css
+++ b/src/app/board/forms/detail-form/detail-form.component.css
@@ -622,7 +622,17 @@ background: rgba(255, 255, 255, 0);
   font-size: 16px;
   margin: 4px 2px;
 }
-
+.buttonNumber {
+    background-color: #0c3028;
+    border: none;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 10px;
+    margin: 4px 2px;
+  }
 .button1 {border-radius: 2px;}
 .button2 {border-radius: 4px;}
 .button3 {border-radius: 8px;}
