--- a/src/app/board/dossier/list-dossier/list-dossier.component.css
+++ b/src/app/board/dossier/list-dossier/list-dossier.component.css
@@ -3,7 +3,48 @@
     cursor: pointer;
     margin-left: 28%;
 }
+.box{
 
+	width: 300px;
+
+	height: 50px;
+
+	background-color: white;
+
+	border-radius: 3px;
+
+	display: flex;
+
+	align-items: center;
+
+	padding: 20px;
+
+}
+
+.box > i {
+
+	font-size: 20px;
+
+	color: #777;
+
+}
+
+.box > input{
+
+	flex: 1;
+  width: 200px;
+	height: 40px;
+background-color: transparent;
+	border: none;
+
+	outline: none;
+
+	font-size: 15px;
+
+	padding-left: 10px;
+
+
+}
 .card-header{
     position: absolute;
     top: 13%;
@@ -21,3 +62,6 @@ h3{
     margin-top: 12px;
 }
 
+.my-pagination /deep/ .ngx-pagination .current {
+    background: #153d77;
+}
