--- a/src/app/board/forms/add-form/add-form.component.css
+++ b/src/app/board/forms/add-form/add-form.component.css
@@ -489,6 +489,22 @@ img{
         font-size: 20px;
     }
 }
+table{
+    border-spacing:0;
+  }
+  
+  tr:first-of-type{
+    background:transparent;
+    height: 30px;
+    }
+  
+  td:nth-child(odd){
+    font-weight:bold;
+  }
+  
+  th,td{
+    padding:5px;
+  }
 textarea{ line-height: 1;
    /*  display: none; */
     white-space: pre-wrap;
