--- a/src/app/board/forms/add-form/add-form.component.html
+++ b/src/app/board/forms/add-form/add-form.component.html
@@ -400,24 +400,26 @@
                                   <div class="col-sm">
                                     <h1>Colonnes</h1>
                                     <div  *ngFor="let op of section.questions[i].grille.scoreS; let o = index;">
-                                        <div class="row m-2">
+                                        <div class="row">
+
                                             <mat-checkbox class=" inp col-md-7 col-lg-7 col-sm-9 col-xs-9 col-9  " >
-                                                <input  class="question-short-text-response" [(ngModel)]="op.title" placeholder="option">
+                                        
                                                 
+                                                  
+                                                <input  class="question-short-text-response" [(ngModel)]="op.title" placeholder="option">
+                                                <input  [(ngModel)]="op.score"  class="question-score" placeholder="0">
                                                 <mat-icon class="ico" style="margin-left: 16px;cursor: pointer;"
                                                 (click)="removeOptionGrille2(i, o,s)"
                                                  *ngIf="section.questions[i].grille.scoreS.length > 1"
                                                    color="primary" >close</mat-icon>
-                                                   <p>
-                                                    Score: 
-                                                    <input  [(ngModel)]="op.score"  class="question-score" placeholder="0">
-                                    
-                                                    </p>
-                                            </mat-checkbox>
 
+                                            
+                                   
+                                            </mat-checkbox>
+                                         
             
                                         </div>
-                                    
+                                     
                                     </div>
                                     <mat-icon style="cursor: help;" >library_add</mat-icon>
                                     <span (click)="section.questions[i].grille.scoreS.push({title:''})" style="cursor: pointer;"> Ajouter une option </span>
