--- a/src/app/board/forms/detail-form/detail-form.component.css
+++ b/src/app/board/forms/detail-form/detail-form.component.css
@@ -506,6 +506,22 @@ button{
     border: 1px solid black;
     border-collapse: collapse;
   } */
+  table{
+    border-spacing:0;
+  }
+  
+  tr:first-of-type{
+    background:transparent;
+    height: 30px;
+    }
+  
+  td:nth-child(odd){
+    font-weight:bold;
+  }
+  
+  th,td{
+    padding:5px;
+  }
   .vertical-line{
     border-left: 1px solid #000;
     display: inline-block;
