--- a/src/app/board/layout/header/header.component.html
+++ b/src/app/board/layout/header/header.component.html
@@ -6,15 +6,16 @@
  
 
     <div class="navbar-collapse collapse" >
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ml-auto"   matTooltip="Déconnexion"
+        matTooltipPosition="above">
         
             <li class="nav-item dropdown ml-lg-2">
                 <a class="nav-link dropdown-toggle position-relative" href="#" id="userDropdown" data-toggle="dropdown">
                     <i class="align-middle fas fa-cog"></i>
                 </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown" >
                
-                    <a class="dropdown-item" (click)="_auth.logoutUser()"><i class="align-middle mr-1 fas fa-fw fa-arrow-alt-circle-right"></i> Déconnexion</a>
+                    <a class="dropdown-item" (click)="_auth.logoutUser()" ><i class="align-middle mr-1 fas fa-fw fa-arrow-alt-circle-right"  ></i> Déconnexion</a>
                 </div>
             </li>
         </ul>
