--- a/src/app/board/forms/list-forms/list-forms.component.html
+++ b/src/app/board/forms/list-forms/list-forms.component.html
@@ -44,13 +44,15 @@
            
             <mat-select class=" form-control"
             [(value)]="form.name"
-            (click)="getData(form.nameAff2)"
+            (click)="testData(form,form.nameAff2)"
              [placeholder]="form.nameAff2[0].Aff1">
           <mat-option
         
-          *ngFor="let item of listeDossier"
+          *ngFor="let item of form.nameAff"
           [value]="form.nameAff2[0].Aff1"
-          (click)="item.name=='Aucune dossier'? disaffect(form._id,item._id) :affect(form._id,item._id)">
+          (click)="item.name=='Aucune dossier'? disaffect(form._id,item._id,form) :affect(form._id,item._id,item)">
+          <mat-icon *ngIf="item.cheked" aria-hidden="false" aria-label="Example home icon">check_box</mat-icon>
+          <mat-icon *ngIf="!item.cheked" aria-hidden="false" aria-label="Example home icon">check_box_outline_blank</mat-icon>
           {{item.name}}
           </mat-option>
           
