--- a/src/app/board/forms/add-form/add-form.component.html
+++ b/src/app/board/forms/add-form/add-form.component.html
@@ -66,15 +66,16 @@
           
                           </mat-radio-button>
                           <mat-radio-button class=" inp col-md-8 col-lg-9 col-sm-9 col-xs-9 col-9"
+                          [checked]="form.genre ==='enfant'"  (change)="handleChange('enfant')" >
+                            <input  class="question-short-text-response" readonly style="border: none;" value="Enfant">
+                       
+                        </mat-radio-button>
+                          <mat-radio-button class=" inp col-md-8 col-lg-9 col-sm-9 col-xs-9 col-9"
                           [checked]="form.genre ==='indifférent'"  (change)="handleChange('indifférent')" >
                             <input  class="question-short-text-response" readonly style="border: none;" value="Indifférent">
                        
                         </mat-radio-button>
-                        <mat-radio-button class=" inp col-md-8 col-lg-9 col-sm-9 col-xs-9 col-9"
-                        [checked]="form.genre ==='enfant'"  (change)="handleChange('enfant')" >
-                          <input  class="question-short-text-response" readonly style="border: none;" value="Enfant">
-                     
-                      </mat-radio-button>
+   
                         </div>
 
 
@@ -769,6 +770,7 @@
        <button class="button button5" (click) = "getNumber('/',k)" value="/">/</button>
        <button class="button button5" (click) = "getNumber('(',k)" value="(">(</button>
        <button class="button button5" (click) = "getNumber(')',k)" value=")">)</button>
+       <button class="button button5" (click) = "getNumber(',',k)" value=")">,</button>
        <button class="button button5" (click) = "clear(k)"  value="all-clear">AC</button>
        <section>
        
@@ -777,7 +779,8 @@
           <button mat-button (click) = "getNumber('1',k)" color="primary">1</button>
           <button mat-button (click) = "getNumber('2',k)" color="primary">2</button>
           <button mat-button (click) = "getNumber('3',k)" color="primary">3</button>
-          <button mat-button (click) = "getNumber('4',k)" color="primary">4</button><br>
+          <button mat-button (click) = "getNumber('4',k)" color="primary">4</button>
+          <br>
           <button mat-button (click) = "getNumber('5',k)" color="primary">5</button>
           <button mat-button (click) = "getNumber('6',k)" color="primary">6</button>
           <button mat-button (click) = "getNumber('7',k)" color="primary">7</button>
