--- a/src/app/board/statistics/statistics.component.html
+++ b/src/app/board/statistics/statistics.component.html
@@ -77,6 +77,9 @@
                                     </div>
                                 </div>
                             </div>
+                            <div *ngIf="!spinerFormulaireAff" class="spinner-border" role="status">
+  
+                            </div>
                             <h1 class="display-5 mt-2 mb-4">{{numberFormulAff}}</h1>
                             <div class="mb-0">
                                 <span class="text-success"> <i class="mdi mdi-arrow-bottom-right"></i> </span>
@@ -101,6 +104,9 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                            <div *ngIf="!spinerFormulaire" class="spinner-border" role="status">
+  
                             </div>
                             <h1 class="display-5 mt-2 mb-4">{{forms?.length}}</h1>
                             <div class="mb-0">
