--- a/src/app/board/dossier/list-dossier/list-dossier.component.html
+++ b/src/app/board/dossier/list-dossier/list-dossier.component.html
@@ -1,21 +1,22 @@
 
-<div class="header">
+<div class="header row">
     <h1 class="header-title">
         Liste des dossiers
     </h1>
-</div>
-<div class="ml-auto col-2" >
+    <div class="ml-auto col-2" >
 
-    <div class="box">
-
-        <i class="fa fa-search" aria-hidden="true"></i>
+        <div class="box">
     
-        <input type="text" placeholder="Nom dossier ..." (input)="filterItem($event.target.value)"
-       >
+            <i class="fa fa-search" aria-hidden="true"></i>
+        
+            <input type="text" placeholder="Nom dossier ..." (input)="filterItem($event.target.value)"
+           >
+        
+        </div>
     
     </div>
-
 </div>
+
 <div class="row">
     
     <div class="col-md-6 col-lg-2 col-sm-5">
