--- a/src/app/board/forms/add-form/add-form.component.css
+++ b/src/app/board/forms/add-form/add-form.component.css
@@ -980,3 +980,9 @@ transition: 1s;
     .button3 {border-radius: 8px;}
     .button4 {border-radius: 12px;}
     .button5 {border-radius: 50%;}
+    input.ng-invalid{
+      border-color: red
+    }
+    input.ng-untouched{
+      border-color: #ced4da
+    }
