--- a/src/app/board/forms/add-form/add-form.component.html
+++ b/src/app/board/forms/add-form/add-form.component.html
@@ -308,7 +308,7 @@
 
                             <div  *ngFor="let op of section.questions[i].optioncm; let o = index;">
                             <div class="row m-2">
-                                <mat-checkbox class=" inp col-md-7 col-lg-7 col-sm-9 col-xs-9 col-9  " >
+                                <mat-checkbox class=" inp col-md-7 col-lg-7 col-sm-9 col-xs-9 col-9  " disabled>
                                     <input  class="question-short-text-response" [(ngModel)]="op.text" placeholder="option">
                                     
                                         <label (click)="in = i; j = o" for="checkPhoto" >
@@ -446,7 +446,7 @@
                                     <div  class="col-lg-8 col-sm-12" style="padding-left: 3%;">
                                         <div *ngIf="section.questions[i].type == 'Range Bar'" class="custom-slider" style="padding-bottom: 20px;width: 89%;padding-left: 4%;">
                                 
-                                            <ng5-slider [(value)]="section.questions[i].options[o].score"  *ngIf="section.questions[i].rangeBoolean" [options]="sliderOptions(section.questions[i])" ></ng5-slider>
+                                            <ng5-slider [(value)]="section.questions[i].options[o].score"  *ngIf="section.questions[i].rangeBoolean" [options]="sliderOptions(section.questions[i])" disabled></ng5-slider>
                                         
                                           </div>
                                                         <mat-dialog-content *ngIf="section.questions[i].rangeBoolean" >
@@ -507,7 +507,9 @@
                         <div *ngIf="section.questions[i].type == 'Cases à cocher'" style="width: 100%;" class="col-lg-12 col-sm-12 w-100">
                             <div  *ngFor="let op of section.questions[i].options; let o = index;">
                                 <div class="row  m-2">
-                                    <mat-radio-button class=" inp col-md-7 col-lg-7 col-sm-9 col-xs-9 col-9  "  >
+                                    <mat-radio-button class=" inp col-md-7 col-lg-7 col-sm-9 col-xs-9 col-9  "  disabled>
+                                  
+                                            
                                         <input  class="question-short-text-response" [(ngModel)]="section.questions[i].options[o].text" placeholder="option">
                                         
                                         <label (click)="in = i; j = o" for="radioPhoto">
@@ -519,8 +521,7 @@
                                         
                                         <mat-icon class="ico"  style="margin-left: 16px;cursor: pointer;" (click)=" deleteImageOption(section.questions[i].options[o].image , i , o,s,'CC') ; removeOption(i, o,s)" *ngIf="section.questions[i].options.length > 1"  color="primary" >close</mat-icon>
                                     
-                
-                                
+                               
                                     </mat-radio-button>
             
                                     
@@ -597,62 +598,31 @@
                                           </div>
                                      
                                           <div class="col">
-                                            <table>
-                                                <tr>  
-                                                    <th col="1" style="color: transparent;">1aaaaaaaaa</th>  
-                                                    <th col="2"style="color: transparent;">2aaaaaaaaaa</th>  
-                                                    <th col="3"style="color: transparent;">3aaaaaaa</th>  
-                                                    <th col="4"style="color: transparent;">4aaaaaaaaa</th>  
-                                                    <th col="5"style="color: transparent;">5aaaaaaaa</th>  
-                                               
-                                                  </tr>  
-                                               </table>
-                                            <div class="form-check">
-                                                <table >
-                                                    <tr>  
-                                                        <th col="1" style="color: transparent;">1aaaaaaaaa</th>  
-                                                        <th col="2"style="color: transparent;">2aaaaaaaaaa</th>  
-                                                        <th col="3"style="color: transparent;">3aaaaaaa</th>  
-                                                        <th col="4"style="color: transparent;">4aaaaaaaaa</th>  
-                                                        <th col="5"style="color: transparent;">5aaaaaaaa</th>  
-                                                   
-                                                      </tr>  
-                                              
-                                                <tr>
-                                                    <td>
-                                                <div class="form-check form-check-inline" >
-                                                    <input input class="form-check-input" type="radio" [name]="o" [id]="o" (change)="onChange($event,i,o,s,'Absent/Pas du tout')" >
-                                                    <label class="form-check-label" [for]="o"></label>
-                                                  </div>
-                                                </td>
-                                                <td>
-                                                  <div class="form-check form-check-inline">
-                                                    <input input class="form-check-input" type="radio" [name]="o" [id]="o" (change)="onChange($event,i,o,s,'Faible/Un peu')">
-                                                    <label class="form-check-label" [for]="o"></label>
-                                                  </div>
-                                                </td>
-                                                <td>
-                                                  <div class="form-check form-check-inline">
-                                                    <input input class="form-check-input" type="radio" [name]="o" [id]="o" (change)="onChange($event,i,o,s,'Modére/Moyennement')">
-                                                    <label class="form-check-label" [for]="o"></label>
-                                                  </div>
-                                                </td>
-                                                <td>
-                                                  <div class="form-check form-check-inline">
-                                                    <input input class="form-check-input" type="radio" [name]="o" [id]="o" (change)="onChange($event,i,o,s,'Fort/Beaucoup')">
-                                                    <label class="form-check-label" [for]="o"></label>
-                                                  </div>
-                                                </td>
-                                                <td>
-                                                  <div class="form-check form-check-inline">
-                                                    <input input class="form-check-input" type="radio" [name]="o" [id]="o" (change)="onChange($event,i,o,s,'Extrémement fort/Extrément')">
-                                                    <label class="form-check-label" [for]="o"></label>
-                                                  </div>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                                </div>
                                          
+                                            <div class="form-check">
+                                                <div class="form-check form-check-inline" >
+                                                    <input input class="form-check-input" type="radio" [name]="o" [id]="o" (change)="onChange($event,i,o,s,'Absent/Pas du tout')" disabled>
+                                                    <label class="form-check-label" [for]="o"></label>
+                                                  </div>
+                                                  <div class="form-check form-check-inline">
+                                                    <input input class="form-check-input" type="radio" [name]="o" [id]="o" (change)="onChange($event,i,o,s,'Faible/Un peu')" disabled>
+                                                    <label class="form-check-label" [for]="o"></label>
+                                                  </div>
+                                                  <div class="form-check form-check-inline">
+                                                    <input input class="form-check-input" type="radio" [name]="o" [id]="o" (change)="onChange($event,i,o,s,'Modére/Moyennement')" disabled>
+                                                    <label class="form-check-label" [for]="o"></label>
+                                                  </div>
+                                                  <div class="form-check form-check-inline">
+                                                    <input input class="form-check-input" type="radio" [name]="o" [id]="o" (change)="onChange($event,i,o,s,'Fort/Beaucoup')" disabled>
+                                                    <label class="form-check-label" [for]="o"></label>
+                                                  </div>
+                                                  <div class="form-check form-check-inline">
+                                                    <input input class="form-check-input" type="radio" [name]="o" [id]="o" (change)="onChange($event,i,o,s,'Extrémement fort/Extrément')" disabled>
+                                                    <label class="form-check-label" [for]="o"></label>
+                                                  </div>
+                                                </div>
+                                               
+                                            
                                           </div>
                                  
                                           <div class="col">
@@ -763,6 +733,36 @@
     <br><br>
     <br>
 </div>
+<div class="col-12 col-md-12 col-lg-11 mx-auto">
+    <div class="card">
+      <div class="card-body">
+        <div class="card-header">
+          <h1 class="form-title"> Bibliographie </h1>
+        </div>
+        <div class="row" *ngFor="let message of form.messages;let m = index">
+         
+          <div class="col-lg-8">
+           <!--  <input type="text" [(ngModel)]="message.message" class="form-control question-short-text-response w-100"
+              placeholder="message"> -->
+              <textarea autosize  rows="20" autosize    [(ngModel)]="message.message" [value]="message.message" rows="2" class="question-title"  placeholder="Description" >
+            </textarea>
+          </div>
+          <div class="col-lg-1" style="display: grid; place-content: center;">
+            <button mat-icon-button (click)="deleteMessage(m)" aria-label="Example icon-button with a heart icon">
+              <mat-icon aria-hidden="false" aria-label="Example home icon">delete</mat-icon>
+            </button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <button mat-icon-button (click)="createNewMessage()" aria-label="Example icon-button with a heart icon">
+              <mat-icon aria-hidden="false" aria-label="Example home icon">add_box</mat-icon>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 <!-- <button mat-icon-button (click)="createNewFormule()" aria-label="Example icon-button with a heart icon">
     <mat-icon aria-hidden="false" aria-label="Example home icon">add_box</mat-icon>
   </button> -->
@@ -771,7 +771,7 @@
     <div class="card">
         <div class="card-body">
             <div class="card-header row  mr-3">       
-                <h1 class="m-3">Formulaire Calcule {{k}}</h1>
+                <h1 class="m-3">Formule Calcule {{k}}</h1>
                 <div class="card-header row mr-3 ml-auto" >
                     <button (click)="deleteFormCalule(k)" *ngIf="form.calculeFormule.length>1" mat-button>
                         <mat-icon aria-hidden="false" aria-label="Example home icon">delete</mat-icon>
@@ -838,7 +838,7 @@
                <th colspan="2">desc</th>  
              </tr>   
              <tr *ngFor="let formCalucl of form.calculeFormule[k].val let z=index">  
-               <td style="width: 20%;height: 10%;">  
+               <td style="width: 30%;height: 10%;">  
                   <input type="number"class="form-control" [(ngModel)]="formCalucl.value"  [value]="formCalucl.value" placeholder="0">  
                </td>  
                <td >  
@@ -847,14 +847,22 @@
           
                </td>  
            <td>  
-             <button (click)="removeQuantity(k,z)" class="btn btn-danger"  *ngIf="form.calculeFormule[k].val.length>1"><i class="fa fa-minus-circle" aria-hidden="true"></i></button>  
-               </td>  
+           <!--   <button (click)="removeQuantity(k,z)" class="btn btn-danger"  *ngIf="form.calculeFormule[k].val.length>1"><i class="fa fa-minus-circle" aria-hidden="true"></i></button>  
+            -->
+             <button mat-icon-button (click)="removeQuantity(k,z)" aria-label="Example icon-button with a heart icon" *ngIf="form.calculeFormule[k].val.length>1">
+                <mat-icon aria-hidden="false" aria-label="Example home icon">delete</mat-icon>
+              </button>
+            
+            </td>  
              </tr>  
            </table>  
             
        <!--   <button type="submit" class="btn btn-success">Submit</button>  -->
-           <button type="button" (click)="addQuantity(k)" class="btn btn-primary"><i class="fa fa-plus-circle" aria-hidden="true"></i></button>
-            
+           <!-- <button mat-icon-button type="button" (click)="addQuantity(k)" class="btn btn-primary"><mat-icon aria-hidden="false" aria-label="Example home icon">add_box</mat-icon></button>
+           -->
+           <button mat-icon-button (click)="addQuantity(k)"  aria-label="Example icon-button with a heart icon">
+            <mat-icon aria-hidden="false" aria-label="Example home icon">add_box</mat-icon>
+          </button>
         <br/>  
     <!--     {{this.productForm.value | json}}   -->
     </div>
