--- a/src/app/board/forms/preview/preview.component.html
+++ b/src/app/board/forms/preview/preview.component.html
@@ -50,10 +50,10 @@
 
     <div *ngFor="let section of form.sections;let s = index">
         <div class="col-12 col-md-12 col-xs-12 col-lg-11 mx-auto">
-            <div class="card-section" style="background-color: #ffffffde;" >
+            <div class="card-section" style="background-color: #ffffffde;"  *ngIf="section.title!=''&&section.description!=''">
                   <div class="card-header">
-                    <input [(ngModel)]="section.title" class="form-title" disabled >
-                    <textarea class="form-description" [(ngModel)]="section.description" disabled  cols="30" rows="1"></textarea>
+                    <input [(ngModel)]="section.title" class="form-title" disabled *ngIf="section.title!=''">
+                    <textarea autosize class="form-description" [(ngModel)]="section.description" disabled  cols="30" rows="1" *ngIf="section.description!=''"></textarea>
                
         
                
@@ -89,7 +89,7 @@
                 <div class="row w-100 mt-1">
                     
                     <div *ngIf="section.questions[i].type == 'Text court'" class="col-lg-8 col-sm-12">
-                        <input  class="question-short-input-response" value="réponse courte">
+                        <input  class="question-short-input-response" value="réponse courte" disabled>
                         <p class="hint"> {{section.questions[i]?.hint}} </p>
                     </div>
                 
@@ -99,7 +99,7 @@
                     <div style="width: 100%;" *ngFor="let op of section.questions[i].optioncm; let o = index;">
                       <div class="row">
                         <div class="col">
-                          <mat-checkbox class="m-2 w-100" style="width: 100%;" >
+                          <mat-checkbox class="m-2 w-100" style="width: 100%;" disabled>
                             <h1 class="question-short-text-response">{{section.questions[i].optioncm[o].text}}</h1>
                         </mat-checkbox>
                         <p class="hint"> {{section.questions[i].optioncm[o]?.hint}} </p>
@@ -243,23 +243,23 @@
                                     <div class="form-check">
                                       
                                         <div class="form-check form-check-inline" >
-                                            <input input class="form-check-input" type="radio" [name]="o" [id]="o" (change)="onChange($event,i,o,s,'Absent/Pas du tout')">
+                                            <input input class="form-check-input" type="radio" [name]="o" [id]="o" (change)="onChange($event,i,o,s,'Absent/Pas du tout')"disabled>
                                             <label class="form-check-label" [for]="o"></label>
                                           </div>
                                           <div class="form-check form-check-inline">
-                                            <input input class="form-check-input" type="radio" [name]="o" [id]="o" (change)="onChange($event,i,o,s,'Faible/Un peu')">
+                                            <input input class="form-check-input" type="radio" [name]="o" [id]="o" (change)="onChange($event,i,o,s,'Faible/Un peu')" disabled>
                                             <label class="form-check-label" [for]="o"></label>
                                           </div>
                                           <div class="form-check form-check-inline">
-                                            <input input class="form-check-input" type="radio" [name]="o" [id]="o" (change)="onChange($event,i,o,s,'Modére/Moyennement')">
+                                            <input input class="form-check-input" type="radio" [name]="o" [id]="o" (change)="onChange($event,i,o,s,'Modére/Moyennement')" disabled>
                                             <label class="form-check-label" [for]="o"></label>
                                           </div>
                                           <div class="form-check form-check-inline">
-                                            <input input class="form-check-input" type="radio" [name]="o" [id]="o" (change)="onChange($event,i,o,s,'Fort/Beaucoup')">
+                                            <input input class="form-check-input" type="radio" [name]="o" [id]="o" (change)="onChange($event,i,o,s,'Fort/Beaucoup')" disabled>
                                             <label class="form-check-label" [for]="o"></label>
                                           </div>
                                           <div class="form-check form-check-inline">
-                                            <input input class="form-check-input" type="radio" [name]="o" [id]="o" (change)="onChange($event,i,o,s,'Extrémement fort/Extrément')">
+                                            <input input class="form-check-input" type="radio" [name]="o" [id]="o" (change)="onChange($event,i,o,s,'Extrémement fort/Extrément')" disabled>
                                             <label class="form-check-label" [for]="o"></label>
                                           </div>
                                         </div>
@@ -322,7 +322,7 @@
                         <div style="width: 100%;" *ngFor="let op of section.questions[i].options; let o = index;">
                           <div class="row">
                             <div class="col">
-                              <mat-radio-button class="m-2 w-100" style="width: 100%;" >
+                              <mat-radio-button class="m-2 w-100" style="width: 100%;" disabled>
                                 <h1 *ngIf="section.questions[i].options[o].text.length > 0" class="question-short-text-response">{{section.questions[i].options[o].text}}</h1>
                             </mat-radio-button>
                             <p class="hint"> {{section.questions[i].options[o]?.hint}} </p>
@@ -335,7 +335,7 @@
                            
                             <div class="col-2">
                               <div class="m-2 w-100">
-                                *
+                                
                                 <input  [(ngModel)]="section.questions[i].options[o].score"  class="question-score" value="0" disabled>
                               </div>
                             </div>
@@ -367,7 +367,7 @@
                               <tr *ngFor="let question of section.questions[i].grille.options">
                                 <th scope="row">{{question.title}}</th>
                                 <td *ngFor="let question of section.questions[i].grille.scoreS" >
-                                    <mat-checkbox class=" inp col-md-7 col-lg-7 col-sm-9 col-xs-9 col-9  " >
+                                    <mat-checkbox class=" inp col-md-7 col-lg-7 col-sm-9 col-xs-9 col-9  " disabled>
                                 
                                     
                                     </mat-checkbox>
@@ -399,15 +399,36 @@
 
     </div>
 
-
+    <div *ngIf="form" class="col-12 col-md-12 col-lg-11 mx-auto">
+      <div class="card" *ngIf="form.messages.length>0">
+        <div class="card-body">
+          <div class="card-header">
+            <h1 class="form-title"> Bibliographie </h1>
+          </div>
+      
+          <div class="row"  *ngFor="let message of form.messages;let m = index">
+         
+            <div class="col-lg-8">
+             <!--  <input type="text" [(ngModel)]="message.message" class="form-control question-short-text-response w-100"
+                placeholder="message"> -->
+                <textarea autosize  rows="20" autosize    [(ngModel)]="message.message" [value]="message.message" rows="2" class="question-title"  placeholder="Description" disabled>
+              </textarea>
+            </div>
+         
+          </div>
+    
+        </div>
+      </div>
+    </div>
 </div>
+
 <div  *ngIf="form"  class="container">
     <div *ngFor="let formCalucl of form.formMuti; let k = index" class="col-12 col-md-12 col-lg-11 mx-auto">
         
         <div class="card">
             <div class="card-body">
                 <div class="card-header row  mr-3">       
-                    <h1 class="m-3">Formulaire Calcule {{k}}</h1>
+                    <h1 class="m-3">Formule Calcule {{k}}</h1>
                     <div class="card-header row mr-3 ml-auto" >
                         <button (click)="deleteFormCalule(k)" *ngIf="form.formMuti.length>1" mat-button>
                             <mat-icon aria-hidden="false" aria-label="Example home icon">delete</mat-icon>
@@ -439,7 +460,7 @@
                    <th colspan="2">desc</th>  
                  </tr>   
                  <tr *ngFor="let formCalucl of form.formMuti[k].val let z=index">  
-                   <td style="width: 20%;height: 10%;">  
+                   <td style="width: 30%;height: 10%;">  
                       <input type="number"class="form-control" [(ngModel)]="formCalucl.value"  [value]="formCalucl.value" placeholder="0" disabled>  
                    </td>  
                    <td col="2">  
