--- a/src/app/board/statistics/statistics.component.html
+++ b/src/app/board/statistics/statistics.component.html
@@ -14,7 +14,7 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col mt-0">
-                                    <h5 class="card-title">professionnel de santé</h5>
+                                    <h5 class="card-title">Professionnel de santé</h5>
                                 </div>
 
                                 <div class="col-auto">
